Updated for release 3.1.0